MiniScheme5.java
/* MiniScheme5.java */
/* Generated By:JavaCC: Do not edit this line. MiniScheme5.java */
import java.util.Scanner;
import java.io.FileInputStream;
import java.io.FileNotFoundException;

public class MiniScheme5 implements MiniScheme5Constants {
  public static Scanner in;

  public static void main(String args[]) throws ParseException
  {
    try {
      MiniScheme5 parser = null;
      in = new Scanner(System.in);
      if (args.length > 0)
      parser = new MiniScheme5(new FileInputStream(args[0]));
      else
      {
        System.out.print("Program filename: ");
        parser = new MiniScheme5(new FileInputStream(in.nextLine()));
       }
      Program p = parser.program();
      p.eval(new Env());
      //p.print();
    }
    catch (FileNotFoundException e)
    {
      System.out.println(e.getMessage());
    }
    catch (RuntimeException e)
    {
      System.out.println(e.getMessage());
      e.printStackTrace();
    }
  }

  static final public Program program() throws ParseException {Program p = new Program(); Exp e = null; Definition d = null;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INTEGER:
      case BOOLEAN:
      case IDENTIFIER:
      case 34:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      if (jj_2_1(2147483647)) {
        d = def();
p.lineList.add(d);
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case INTEGER:
        case BOOLEAN:
        case IDENTIFIER:
        case 34:{
          e = exp();
p.lineList.add(e);
          break;
          }
        default:
          jj_la1[1] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
{if ("" != null) return p;}
    throw new Error("Missing return statement in function");
}

  static final public Definition def() throws ParseException {Definition d = null; Variable var = null; Exp e = null;
    jj_consume_token(34);
    jj_consume_token(DEFINE);
    var = variable();
    e = exp();
    jj_consume_token(35);
d = new Definition(var, e);
{if ("" != null) return d;}
    throw new Error("Missing return statement in function");
}

  static final public Exp exp() throws ParseException {Exp e = null;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case IDENTIFIER:{
      e = variable();
      break;
      }
    case INTEGER:
    case BOOLEAN:{
      e = literal();
      break;
      }
    case 34:{
      jj_consume_token(34);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IF:{
        e = cond();
        break;
        }
      case SET:{
        e = assign();
        break;
        }
      case PLUS:
      case MINUS:
      case MULTIPLY:
      case QUOTIENT:
      case READ:
      case WRITE:
      case NEWLINE:
      case LET:
      case AND:
      case OR:
      case NOT:
      case EQV_CHECK:
      case LESS_THAN:
      case INT_CHECK:
      case BOOL_CHECK:
      case PAIR_CHECK:
      case CONS_PAIR:
      case CONS_LIST:
      case NULL_CHECK:{
        e = derivedExpression();
        break;
        }
      case LAMBDA:{
        e = lambdaExp();
        break;
        }
      case INTEGER:
      case BOOLEAN:
      case IDENTIFIER:
      case 34:{
        e = procCall();
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(35);
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return e;}
    throw new Error("Missing return statement in function");
}

  static final public Variable variable() throws ParseException {Variable var = null; String id = null;
    jj_consume_token(IDENTIFIER);
id = token.image; var = new Variable(id);
{if ("" != null) return var;}
    throw new Error("Missing return statement in function");
}

  static final public Literal literal() throws ParseException {Literal l = null; String s = null;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INTEGER:{
      jj_consume_token(INTEGER);
s = token.image; l = new Int(s);
      break;
      }
    case BOOLEAN:{
      jj_consume_token(BOOLEAN);
s = token.image; l = new Bool(s);
      break;
      }
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return l;}
    throw new Error("Missing return statement in function");
}

  static final public Cond cond() throws ParseException {Cond c = null; Exp e1 = null; Exp e2 = null; Exp e3 = null;
    jj_consume_token(IF);
    e1 = exp();
    e2 = exp();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INTEGER:
    case BOOLEAN:
    case IDENTIFIER:
    case 34:{
      e3 = exp();
      break;
      }
    default:
      jj_la1[5] = jj_gen;
      ;
    }
c = new Cond(e1, e2, e3); {if ("" != null) return c;}
    throw new Error("Missing return statement in function");
}

  static final public Assignment assign() throws ParseException {Assignment a = null; Variable var = null; Exp e = null;
    jj_consume_token(SET);
    var = variable();
    e = exp();
a = new Assignment(var, e);
{if ("" != null) return a;}
    throw new Error("Missing return statement in function");
}

  static final public Exp derivedExpression() throws ParseException {Token t = null; Exp e1 = null; Exp e2 = null;
  WriteExpression we = null; ArithExp ae = null;
  ReadExpression re = null; NewlineExpression nl = null;
  LetExp le = null; BindSpec bi = null; Body bod = null;
  AndExp andE = null; OrExp orE = null; List lst = null;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case READ:{
      jj_consume_token(READ);
re = new ReadExpression(in); e1 = re;
      break;
      }
    case WRITE:{
      jj_consume_token(WRITE);
      e1 = exp();
we = new WriteExpression(e1); e1 = we;
      break;
      }
    case NEWLINE:{
      jj_consume_token(NEWLINE);
nl = new NewlineExpression(); e1 = nl;
      break;
      }
    case PLUS:
    case MINUS:
    case MULTIPLY:
    case QUOTIENT:{
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:{
        jj_consume_token(PLUS);
        break;
        }
      case MINUS:{
        jj_consume_token(MINUS);
        break;
        }
      case MULTIPLY:{
        jj_consume_token(MULTIPLY);
        break;
        }
      case QUOTIENT:{
        jj_consume_token(QUOTIENT);
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
t = token;
      e1 = exp();
      e2 = exp();
ae = new ArithExp(t.image, e1, e2); e1 = ae;
      break;
      }
    case LET:{
      jj_consume_token(LET);
le = new LetExp();
      jj_consume_token(34);
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 34:{
          ;
          break;
          }
        default:
          jj_la1[7] = jj_gen;
          break label_2;
        }
        bi = bindSpec();
le.binds.add(bi);
      }
      jj_consume_token(35);
      bod = body();
le.body = bod; e1=le;
      break;
      }
    case AND:{
      jj_consume_token(AND);
andE = new AndExp();
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case INTEGER:
        case BOOLEAN:
        case IDENTIFIER:
        case 34:{
          ;
          break;
          }
        default:
          jj_la1[8] = jj_gen;
          break label_3;
        }
        e1 = exp();
andE.expList.add(e1);
      }
e1 = andE;
      break;
      }
    case OR:{
      jj_consume_token(OR);
orE = new OrExp();
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case INTEGER:
        case BOOLEAN:
        case IDENTIFIER:
        case 34:{
          ;
          break;
          }
        default:
          jj_la1[9] = jj_gen;
          break label_4;
        }
        e1 = exp();
orE.expList.add(e1);
      }
e1 = orE;
      break;
      }
    case NOT:{
      jj_consume_token(NOT);
      e1 = exp();
e1 = new NotExp(e1);
      break;
      }
    case EQV_CHECK:{
      jj_consume_token(EQV_CHECK);
      e1 = exp();
      e2 = exp();
e1 = new EqvExp(e1, e2);
      break;
      }
    case LESS_THAN:{
      jj_consume_token(LESS_THAN);
      e1 = exp();
      e2 = exp();
e1 = new LessExp(e1, e2);
      break;
      }
    case INT_CHECK:{
      jj_consume_token(INT_CHECK);
      e1 = exp();
e1 = new IntCheckExp(e1);
      break;
      }
    case BOOL_CHECK:{
      jj_consume_token(BOOL_CHECK);
      e1 = exp();
e1 = new BoolCheckExp(e1);
      break;
      }
    case PAIR_CHECK:{
      jj_consume_token(PAIR_CHECK);
      e1 = exp();
e1 = new PairCheckExp(e1);
      break;
      }
    case CONS_PAIR:{
      jj_consume_token(CONS_PAIR);
      e1 = exp();
      e2 = exp();
e1 = new Pair(e1, e2);
      break;
      }
    case CONS_LIST:{
      jj_consume_token(CONS_LIST);
lst = new List();
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case INTEGER:
        case BOOLEAN:
        case IDENTIFIER:
        case 34:{
          ;
          break;
          }
        default:
          jj_la1[10] = jj_gen;
          break label_5;
        }
        e1 = exp();
lst.addList(e1);
      }
e1=lst;
      break;
      }
    case NULL_CHECK:{
      jj_consume_token(NULL_CHECK);
      e1 = exp();
e1 = new NullCheckExp(e1);
      break;
      }
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return e1;}
    throw new Error("Missing return statement in function");
}

  static final public BindSpec bindSpec() throws ParseException {Variable var = null; Exp e = null;
    jj_consume_token(34);
    var = variable();
    e = exp();
    jj_consume_token(35);
{if ("" != null) return new BindSpec(var, e);}
    throw new Error("Missing return statement in function");
}

  static final public Body body() throws ParseException {Body bod = new Body(); Definition def = null; Exp exp = null;
    label_6:
    while (true) {
      if (jj_2_2(2147483647)) {
        ;
      } else {
        break label_6;
      }
      def = def();
bod.lines.add(def);
    }
    label_7:
    while (true) {
      exp = exp();
bod.lines.add(exp);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INTEGER:
      case BOOLEAN:
      case IDENTIFIER:
      case 34:{
        ;
        break;
        }
      default:
        jj_la1[12] = jj_gen;
        break label_7;
      }
    }
{if ("" != null) return bod;}
    throw new Error("Missing return statement in function");
}

  static final public LambdaExp lambdaExp() throws ParseException {LambdaExp l = new LambdaExp(); Variable v = null; Body b = null;
    jj_consume_token(LAMBDA);
    jj_consume_token(34);
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IDENTIFIER:{
        ;
        break;
        }
      default:
        jj_la1[13] = jj_gen;
        break label_8;
      }
      v = variable();
l.varList.add(v);
    }
    jj_consume_token(35);
    b = body();
l.body = b;
{if ("" != null) return l;}
    throw new Error("Missing return statement in function");
}

  static final public ProcCall procCall() throws ParseException {ProcCall p = new ProcCall(); Exp e = null;
    label_9:
    while (true) {
      e = exp();
p.expList.add(e);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INTEGER:
      case BOOLEAN:
      case IDENTIFIER:
      case 34:{
        ;
        break;
        }
      default:
        jj_la1[14] = jj_gen;
        break label_9;
      }
    }
{if ("" != null) return p;}
    throw new Error("Missing return statement in function");
}

  static private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_1()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_2()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_3R_derivedExpression_184_5_44()
 {
    if (jj_scan_token(CONS_LIST)) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3R_derivedExpression_184_43_52()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  static private boolean jj_3R_derivedExpression_183_5_43()
 {
    if (jj_scan_token(CONS_PAIR)) return true;
    if (jj_3R_exp_123_9_12()) return true;
    if (jj_3R_exp_123_9_12()) return true;
    return false;
  }

  static private boolean jj_3R_derivedExpression_182_5_42()
 {
    if (jj_scan_token(PAIR_CHECK)) return true;
    if (jj_3R_exp_123_9_12()) return true;
    return false;
  }

  static private boolean jj_3R_derivedExpression_181_5_41()
 {
    if (jj_scan_token(BOOL_CHECK)) return true;
    if (jj_3R_exp_123_9_12()) return true;
    return false;
  }

  static private boolean jj_3R_derivedExpression_180_5_40()
 {
    if (jj_scan_token(INT_CHECK)) return true;
    if (jj_3R_exp_123_9_12()) return true;
    return false;
  }

  static private boolean jj_3R_derivedExpression_179_5_39()
 {
    if (jj_scan_token(LESS_THAN)) return true;
    if (jj_3R_exp_123_9_12()) return true;
    if (jj_3R_exp_123_9_12()) return true;
    return false;
  }

  static private boolean jj_3R_derivedExpression_178_5_38()
 {
    if (jj_scan_token(EQV_CHECK)) return true;
    if (jj_3R_exp_123_9_12()) return true;
    if (jj_3R_exp_123_9_12()) return true;
    return false;
  }

  static private boolean jj_3R_derivedExpression_177_5_37()
 {
    if (jj_scan_token(NOT)) return true;
    if (jj_3R_exp_123_9_12()) return true;
    return false;
  }

  static private boolean jj_3R_derivedExpression_176_5_36()
 {
    if (jj_scan_token(OR)) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3R_derivedExpression_176_37_51()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  static private boolean jj_3R_cond_151_29_29()
 {
    if (jj_3R_exp_123_9_12()) return true;
    return false;
  }

  static private boolean jj_3R_derivedExpression_175_5_35()
 {
    if (jj_scan_token(AND)) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3R_derivedExpression_175_40_50()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  static private boolean jj_3R_derivedExpression_174_5_34()
 {
    if (jj_scan_token(LET)) return true;
    if (jj_scan_token(34)) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3R_derivedExpression_174_42_49()) { jj_scanpos = xsp; break; }
    }
    if (jj_scan_token(35)) return true;
    if (jj_3R_body_200_3_47()) return true;
    return false;
  }

  static private boolean jj_3R_derivedExpression_173_5_33()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(5)) {
    jj_scanpos = xsp;
    if (jj_scan_token(6)) {
    jj_scanpos = xsp;
    if (jj_scan_token(7)) {
    jj_scanpos = xsp;
    if (jj_scan_token(8)) return true;
    }
    }
    }
    if (jj_3R_exp_123_9_12()) return true;
    if (jj_3R_exp_123_9_12()) return true;
    return false;
  }

  static private boolean jj_3R_derivedExpression_172_5_32()
 {
    if (jj_scan_token(NEWLINE)) return true;
    return false;
  }

  static private boolean jj_3R_derivedExpression_171_5_31()
 {
    if (jj_scan_token(WRITE)) return true;
    if (jj_3R_exp_123_9_12()) return true;
    return false;
  }

  static private boolean jj_3R_derivedExpression_170_5_30()
 {
    if (jj_scan_token(READ)) return true;
    return false;
  }

  static private boolean jj_3R_derivedExpression_169_3_26()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_derivedExpression_170_5_30()) {
    jj_scanpos = xsp;
    if (jj_3R_derivedExpression_171_5_31()) {
    jj_scanpos = xsp;
    if (jj_3R_derivedExpression_172_5_32()) {
    jj_scanpos = xsp;
    if (jj_3R_derivedExpression_173_5_33()) {
    jj_scanpos = xsp;
    if (jj_3R_derivedExpression_174_5_34()) {
    jj_scanpos = xsp;
    if (jj_3R_derivedExpression_175_5_35()) {
    jj_scanpos = xsp;
    if (jj_3R_derivedExpression_176_5_36()) {
    jj_scanpos = xsp;
    if (jj_3R_derivedExpression_177_5_37()) {
    jj_scanpos = xsp;
    if (jj_3R_derivedExpression_178_5_38()) {
    jj_scanpos = xsp;
    if (jj_3R_derivedExpression_179_5_39()) {
    jj_scanpos = xsp;
    if (jj_3R_derivedExpression_180_5_40()) {
    jj_scanpos = xsp;
    if (jj_3R_derivedExpression_181_5_41()) {
    jj_scanpos = xsp;
    if (jj_3R_derivedExpression_182_5_42()) {
    jj_scanpos = xsp;
    if (jj_3R_derivedExpression_183_5_43()) {
    jj_scanpos = xsp;
    if (jj_3R_derivedExpression_184_5_44()) {
    jj_scanpos = xsp;
    if (jj_3R_derivedExpression_185_5_45()) return true;
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    return false;
  }

  static private boolean jj_3R_exp_126_44_19()
 {
    if (jj_3R_derivedExpression_169_3_26()) return true;
    return false;
  }

  static private boolean jj_3R_assign_158_3_25()
 {
    if (jj_scan_token(SET)) return true;
    if (jj_3R_variable_134_3_11()) return true;
    if (jj_3R_exp_123_9_12()) return true;
    return false;
  }

  static private boolean jj_3R_exp_126_31_18()
 {
    if (jj_3R_assign_158_3_25()) return true;
    return false;
  }

  static private boolean jj_3R_cond_151_3_24()
 {
    if (jj_scan_token(IF)) return true;
    if (jj_3R_exp_123_9_12()) return true;
    if (jj_3R_exp_123_9_12()) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_cond_151_29_29()) jj_scanpos = xsp;
    return false;
  }

  static private boolean jj_3R_literal_143_5_23()
 {
    if (jj_scan_token(BOOLEAN)) return true;
    return false;
  }

  static private boolean jj_3R_literal_142_5_22()
 {
    if (jj_scan_token(INTEGER)) return true;
    return false;
  }

  static private boolean jj_3R_exp_126_20_17()
 {
    if (jj_3R_cond_151_3_24()) return true;
    return false;
  }

  static private boolean jj_3R_literal_141_3_16()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_literal_142_5_22()) {
    jj_scanpos = xsp;
    if (jj_3R_literal_143_5_23()) return true;
    }
    return false;
  }

  static private boolean jj_3R_exp_124_19_13()
 {
    if (jj_3R_variable_134_3_11()) return true;
    return false;
  }

  static private boolean jj_3R_exp_126_15_15()
 {
    if (jj_scan_token(34)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_exp_126_20_17()) {
    jj_scanpos = xsp;
    if (jj_3R_exp_126_31_18()) {
    jj_scanpos = xsp;
    if (jj_3R_exp_126_44_19()) {
    jj_scanpos = xsp;
    if (jj_3R_exp_126_68_20()) {
    jj_scanpos = xsp;
    if (jj_3R_exp_126_84_21()) return true;
    }
    }
    }
    }
    if (jj_scan_token(35)) return true;
    return false;
  }

  static private boolean jj_3R_exp_125_15_14()
 {
    if (jj_3R_literal_141_3_16()) return true;
    return false;
  }

  static private boolean jj_3R_variable_134_3_11()
 {
    if (jj_scan_token(IDENTIFIER)) return true;
    return false;
  }

  static private boolean jj_3R_lambdaExp_210_19_46()
 {
    if (jj_3R_variable_134_3_11()) return true;
    return false;
  }

  static private boolean jj_3R_derivedExpression_184_43_52()
 {
    if (jj_3R_exp_123_9_12()) return true;
    return false;
  }

  static private boolean jj_3R_exp_123_9_12()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_exp_124_19_13()) {
    jj_scanpos = xsp;
    if (jj_3R_exp_125_15_14()) {
    jj_scanpos = xsp;
    if (jj_3R_exp_126_15_15()) return true;
    }
    }
    return false;
  }

  static private boolean jj_3R_procCall_217_4_48()
 {
    if (jj_3R_exp_123_9_12()) return true;
    return false;
  }

  static private boolean jj_3R_procCall_217_3_28()
 {
    Token xsp;
    if (jj_3R_procCall_217_4_48()) return true;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3R_procCall_217_4_48()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  static private boolean jj_3_1()
 {
    if (jj_3R_def_116_3_10()) return true;
    return false;
  }

  static private boolean jj_3_2()
 {
    if (jj_3R_def_116_3_10()) return true;
    return false;
  }

  static private boolean jj_3R_derivedExpression_174_42_49()
 {
    if (jj_3R_bindSpec_193_3_55()) return true;
    return false;
  }

  static private boolean jj_3R_derivedExpression_175_40_50()
 {
    if (jj_3R_exp_123_9_12()) return true;
    return false;
  }

  static private boolean jj_3R_def_116_3_10()
 {
    if (jj_scan_token(34)) return true;
    if (jj_scan_token(DEFINE)) return true;
    if (jj_3R_variable_134_3_11()) return true;
    if (jj_3R_exp_123_9_12()) return true;
    if (jj_scan_token(35)) return true;
    return false;
  }

  static private boolean jj_3R_derivedExpression_176_37_51()
 {
    if (jj_3R_exp_123_9_12()) return true;
    return false;
  }

  static private boolean jj_3R_lambdaExp_210_3_27()
 {
    if (jj_scan_token(LAMBDA)) return true;
    if (jj_scan_token(34)) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3R_lambdaExp_210_19_46()) { jj_scanpos = xsp; break; }
    }
    if (jj_scan_token(35)) return true;
    if (jj_3R_body_200_3_47()) return true;
    return false;
  }

  static private boolean jj_3R_exp_126_84_21()
 {
    if (jj_3R_procCall_217_3_28()) return true;
    return false;
  }

  static private boolean jj_3R_body_202_6_54()
 {
    if (jj_3R_exp_123_9_12()) return true;
    return false;
  }

  static private boolean jj_3R_body_201_6_53()
 {
    if (jj_3R_def_116_3_10()) return true;
    return false;
  }

  static private boolean jj_3R_body_200_3_47()
 {
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3R_body_201_6_53()) { jj_scanpos = xsp; break; }
    }
    if (jj_3R_body_202_6_54()) return true;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3R_body_202_6_54()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  static private boolean jj_3R_bindSpec_193_3_55()
 {
    if (jj_scan_token(34)) return true;
    if (jj_3R_variable_134_3_11()) return true;
    if (jj_3R_exp_123_9_12()) return true;
    if (jj_scan_token(35)) return true;
    return false;
  }

  static private boolean jj_3R_exp_126_68_20()
 {
    if (jj_3R_lambdaExp_210_3_27()) return true;
    return false;
  }

  static private boolean jj_3R_derivedExpression_185_5_45()
 {
    if (jj_scan_token(NULL_CHECK)) return true;
    if (jj_3R_exp_123_9_12()) return true;
    return false;
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public MiniScheme5TokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private Token jj_scanpos, jj_lastpos;
  static private int jj_la;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[15];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
	   jj_la1_init_0();
	   jj_la1_init_1();
	}
	private static void jj_la1_init_0() {
	   jj_la1_0 = new int[] {0x80000a00,0x80000a00,0xffff7be0,0x80000a00,0xa00,0x80000a00,0x1e0,0x0,0x80000a00,0x80000a00,0x80000a00,0x7bf971e0,0x80000a00,0x80000000,0x80000a00,};
	}
	private static void jj_la1_init_1() {
	   jj_la1_1 = new int[] {0x4,0x4,0x4,0x4,0x0,0x4,0x0,0x4,0x4,0x4,0x4,0x0,0x4,0x0,0x4,};
	}
  static final private JJCalls[] jj_2_rtns = new JJCalls[2];
  static private boolean jj_rescan = false;
  static private int jj_gc = 0;
